syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "FieldTypeCharConfig";

package nem;



message FieldTypeCharConfig {  
    int64 min_size = 1;
    int64 max_size = 2;
    string regex_validation = 3;    
}
